--- a/haskell-fractal.cabal
+++ b/haskell-fractal.cabal
@@ -16,11 +16,11 @@ executable fractal
   -- other-extensions:
   build-depends:        base
                       , text
-                      , JuicyPixels
                       , diagrams-core 
                       , diagrams-lib
                       , diagrams-contrib
                       , diagrams-svg
+                      , mtl
   ghc-options:          -O2 -Wall -fforce-recomp
   default-language:     Haskell2010
 
